# sck-core-ai

./: .coverage  .coveragerc  .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.mcp  PLANNING.md  README-langflow.md  README.md  TROUBLESHOOTING.md  build.ps1  build_requirements.ps1  compose.yml  coverage.ps1  flakeit.ps1  mcp_http_bridge.py  package-lock.json  pyproject.toml  pytest.ps1  requirements.txt  run_mcp_server.py  sck_tools_server.py  setup-langflow.ps1  start.ps1  test_indexing.py  test_mcp.py  testmcp.ps1
.github/: copilot-instructions.md
core_ai/: __init__.py  cache.py  contracts.py  core_server.py  mcp_server.py  oauth_provider.py  request.py  server.py  service.py
core_ai/indexing/: __init__.py  action_indexer.py  codebase_indexer.py  consumables_indexer.py  context_manager.py  documentation_indexer.py  simple_vector_store.py  vector_store.py
core_ai/langflow/: __init__.py  client.py  sck_mcp_tools.py  sck_tools_component.py  simple_sck_tools.py
core_ai/tools/: __init__.py  registry.py  sck_arch_tools.py  sck_code_tools.py  sck_docs_tools.py
langflow/: README.md  Simple Agent.json  ai-agent-flow.json  compose.yml  mcp-config.json  sck-chat-assistant.json  sck-documentation-assistant.json  sck-documentation-chat.json  sck-mcp-chat.json  sck-mcp-documentation-chat.json  sck-minimal.json  sck-simple.json
tests/: conftest.py  test_actions_catalog.py  test_cache_basic.py  test_chat_idempotency.py  test_consumables_indexer.py  test_http_tools_and_chat.py  test_langflow_client.py  test_mcp_context_handlers.py  test_readiness.py  test_service_error_paths.py  test_service_layer.py  test_vector_store_basic.py
