[project]
name = "sck-core-ai"
version = "0.1.0"
description = "AI agent for YAML/CloudFormation linting and code completion using Langflow"
readme = "README.md"
authors = [
    { name = "James Barwick", email = "jbarwick@me.com" }
]
requires-python = ">=3.11"
dependencies = [
    # FastAPI for local dev and API structure
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    
    # HTTP client and utilities
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    
    # YAML and CloudFormation processing
    "pyyaml>=6.0.1",
    "jinja2>=3.1.2",
    
    # Logging
    "structlog>=23.2.0",
    
    # Optional dependencies for full functionality
    # Uncomment when developing with full features:
    "boto3>=1.34.0",
    "mangum>=0.17.0",  # ASGI adapter for AWS Lambda
    "langflow>=0.6.0",
    "langchain>=0.1.0",
    "cfn-lint>=0.83.0",
    "mcp>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core_ai"]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    
    # Code quality
    "black>=23.11.0",
    "flake8>=6.1.0",
    "mypy>=1.7.0",
    "isort>=5.12.0",
    
    # Local development
    "python-dotenv>=1.0.0",
    "pre-commit>=3.6.0",
    
    # Langflow development tools
    "langflow[dev]>=0.6.0",
    
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
]

[project.scripts]
sck-ai-server = "core_ai.server:main"
sck-ai-mcp = "core_ai.mcp_server:main"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=core_ai --cov-report=html --cov-report=term-missing"
